--- a/SG/pro/blob/install
+++ b/SG/pro/blob/install
@@ -1,1 +1,1 @@
-Not Found
+{"all":{"config":{"form":{"eula":{"eula":false},"game_dir":{"dirname":"Overwatch"}}}},"platform":{"win":{"config":{"form":{"game_dir":{"default":"Program Files","required_space":6500000000,"space_per_extra_language":250000000}}}}}}
